# cmake_cpputest_skeleton

./: CMakeLists.txt
cmake/: AddCppUTest.cmake
include/LedDriver/: LedDriver.h
include/utils/: RuntimeError.h
mocks/: CMakeLists.txt  RuntimeErrorStub.c  RuntimeErrorStub.h
src/: CMakeLists.txt
src/LedDriver/: CMakeLists.txt  LedDriver.c
tests/: AllTests.cpp  CMakeLists.txt
tests/LedDriver/: CMakeLists.txt  LedDriverTest.cpp
tests/Skeleton/: CMakeLists.txt  SkeletonTest.cpp
tests/stdio/: CMakeLists.txt  SprintfTest.cpp
